# sprite-cli

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-05-sprite-cli-design.md  2026-03-05-sprite-cli-implementation.md
examples/: reggie.json  robot.json
sprite-creator-skill/: SKILL.md
sprite-creator-skill/evals/: evals.json
sprite_cli/: __init__.py  analysis.py  animator.py  cli.py  importer.py  models.py  renderer.py  transforms.py  validator.py
tests/: test_animator.py  test_cli.py  test_e2e.py  test_importer.py  test_models.py  test_renderer.py  test_transforms.py  test_validator.py
