[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-cli"
version = "0.1.0"
description = "Pixel-art sprite CLI for AI-driven game asset creation"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pillow>=10.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
sprite = "sprite_cli.cli:cli"
